# MyTetris

./: CMakeLists.txt  LibTest.slnx
LibTest/: LibTest.vcxproj  LibTest.vcxproj.filters  Piece.cpp  Piece.hpp  main.cpp
assets/: I_srsOffsets.txt  JLTZSO_srsOffsets.txt  wallKicksData.txt
include/: Brick.hpp  Game.hpp  Grid.hpp  Log.hpp  Piece.hpp  Utils.hpp
src/: Brick.cpp  Game.cpp  Grid.cpp  Log.cpp  Piece.cpp  Utils.cpp  main.cpp
